Add browsertests for ProxyResolutionServiceProvider.

Bug: 921814
Change-Id: Ia2ae35bb7bf4601318c672e1d1652bbd75e7713d
Reviewed-on: https://chromium-review.googlesource.com/c/1418499
Commit-Queue: Eric Roman <eroman@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623945}
Former-commit-id: e5faa6d1e55641d69b75d6f6326cd242fd9b7f91